# leanMultisig

./: .gitignore  Cargo.toml  NEW_TRAIT_DEMO.rs  README.md  TODO.md  debug_inline.rs  inline_edge_cases_suggestions.md  optimized_poseidon_summary.md  sig.
crates/backend/: Cargo.toml
crates/backend/air/: Cargo.toml
crates/backend/air/src/: lib.rs  symbolic.rs
crates/backend/air/tests/: arena_safety.rs
crates/backend/fiat-shamir/: Cargo.toml
crates/backend/fiat-shamir/src/: challenger.rs  lib.rs  merkle_pruning.rs  prover.rs  traits.rs  transcript.rs  utils.rs  verifier.rs
crates/backend/fiat-shamir/tests/: challenger_hardening.rs  grinding.rs
crates/backend/field/: Cargo.toml
crates/backend/field/src/: exponentiation.rs  field.rs  helpers.rs  integers.rs  lib.rs  op_assign_macros.rs
crates/backend/goldilocks/: Cargo.toml
crates/backend/goldilocks/src/: benchmark_poseidons_goldilocks.rs  cubic_extension.rs  goldilocks.rs  helpers.rs  lib.rs  packed_cubic_extension.rs  poseidon1.rs
crates/backend/gpu-poseidon/: Cargo.toml
crates/backend/gpu-poseidon/src/: lib.rs  metal_impl.rs
crates/backend/koala-bear/: Cargo.toml
crates/backend/koala-bear/src/: koala_bear.rs  (+9 more)
crates/backend/poly/: Cargo.toml
crates/backend/src/: lib.rs
crates/backend/sumcheck/: Cargo.toml
crates/backend/symetric/: Cargo.toml
crates/backend/system-info/: Cargo.toml  build.rs
crates/backend/zk-alloc/: Cargo.toml
crates/lean-da/: Cargo.toml
crates/lean-da/src/: cache.rs  lib.rs  main.rs
crates/lean-da/tests/: test_barycentric.py  test_barycentric.rs
crates/lean-da/zkdsl_implem/: barycentric.py  lean_da.py  lean_da_ood.py  lean_da_ood_column_major.py  lean_da_ood_tiled.py  ood_barycentric.py
crates/leanVm/: Cargo.toml
crates/leanVm/src/: constant.rs  core.rs  grammar.pest  intermediate_bytecode.rs  lang.rs  lib.rs  poseidon2.rs  trace.rs  utils.rs
crates/lean_compiler/: Cargo.toml  snark_lib.py  zkDSL.md
crates/lean_compiler/examples/: dump_pretty.rs  mre_copies.rs
crates/lean_compiler/src/: a_simplify_lang.rs  b_compile_intermediate.rs  c_compile_final.rs  compile.rs  grammar.pest  instruction_encoder.rs  lang.rs  lib.rs  parser.rs  precompiles.rs  traits.rs
crates/lean_compiler/tests/: bar.snark  circular_import.snark  foo.snark  program_0.snark  program_1.snark  program_2.snark  program_3.snark  program_4.snark  program_6.snark  test_compiler.rs  test_performance.rs
crates/lean_prover/: Cargo.toml  poseidon1_constants.json  test_gkr.py  test_whir.py  test_zkvm.py  verifier.py  whir_configs.json
crates/lean_prover/src/: common.rs  lib.rs  prove_execution.rs  test_zkvm.rs  trace_gen.rs  verify_execution.rs
crates/lean_prover/tests/: dump_gkr_vector.rs  dump_poseidon1_constants.rs  dump_whir_configs.rs  dump_zkvm_vector.rs  hash_chain.rs  test_range_check.rs  test_zkvm.rs
crates/lean_prover/vm_air/: Cargo.toml
crates/lean_prover/vm_circuits/: Cargo.toml
crates/lean_prover/witness_generation/: Cargo.toml
crates/lean_vm/: Cargo.toml
crates/lean_vm/src/: lean_isa.rs  lib.rs  runner.rs
crates/lean_vm/tests/: address_safety.rs  test_lean_vm.rs
crates/leansig_wrapper/: Cargo.toml
crates/leansig_wrapper/src/: lib.rs
crates/lookup/: Cargo.toml
crates/lookup/src/: lib.rs  logup.rs  logup_star.rs  product_gkr.rs  quotient_gkr.rs
crates/multilinear-toolkit/poly/: Cargo.toml
crates/multilinear-toolkit/whir/: Cargo.toml
crates/poseidon_circuit/: Cargo.toml
crates/poseidon_circuit/src/: lib.rs  prove.rs  tests.rs  utils.rs  verify.rs  witness_gen.rs
crates/precompiles/: Cargo.toml
crates/precompiles/src/: lib.rs
crates/rec_aggregation/: Cargo.toml  TYPE1_TYPE2_LAYOUT.md  build.rs  fiat_shamir.py  fiat_shamir.snark  fiat_shamir.snark.py  full_recursion.snark  hashing.py  hashing.snark  main.py  recursion.py  recursion.snark  recursion_program.lean_lang  utils.py  utils.snark  utils.snark.py  whir.py  whir_core.snark  whir_recursion.snark  xmss_aggregate.lean_lang  xmss_aggregate.py  xmss_aggregate.snark
crates/rec_aggregation/examples/: dump_pretty.rs
crates/rec_aggregation/src/: air_constraints_optimizer.md  air_constraints_optimizer.rs  benchmark.rs  bytecode_claims.rs  compilation.rs  full_recursion.rs  hints.rs  hints_cache.rs  lib.rs  multi_signature.rs  recursion.rs  signatures_cache.rs  signers_cache.rs  type_1_aggregation.rs  type_2_aggregation.rs  whir_recursion.rs  wrappers.rs  xmss_aggregate.rs
crates/rec_aggregation/tests/: test_bp_eval.py  test_bp_eval.rs  test_dump_bytecode.rs  test_hashing.py  test_hashing.rs  test_invalid_xmss.rs  test_jagged_f_at_istar.py  test_jagged_f_at_istar.rs  test_log2_ceil.py  test_log2_ceil.rs
crates/rec_aggregation/zkdsl_implem/: fiat_shamir.py  hashing.py  jagged_bp.py  main.py  recursion.py  utils.py  whir.py  xmss_aggregate.py
crates/sub_protocols/: Cargo.toml
crates/sub_protocols/src/: air_sumcheck.rs  batched_air.rs  commit_extension_from_base.rs  custom_logup.rs  custom_lookup.rs  custom_packed_lookup.rs  generic_logup.rs  generic_packed_lookup.rs  lib.rs  logup.rs  logup_star.rs  mle_eq_sumcheck.rs  normal_packed_lookup.rs  packed_pcs.rs  quotient_gkr.rs  reduce_claims.rs  stacked_pcs.rs  vectorized_packed_lookup.rs
crates/sub_protocols/tests/: prove_poseidon_16.rs  prove_poseidon_8.rs  test_custom_logup.rs  test_generic_logup.rs  test_generic_packed_lookup.rs  test_normal_packed_lookup.rs  test_packed_lookup.rs  test_vectorized_packed_lookup.rs
crates/sumcheck/: Cargo.toml
crates/sumcheck/src/: mle.rs  prove.rs  sc_computation.rs  verify.rs
crates/utils/: Cargo.toml
crates/utils/src/: ansi.rs  constraints_checker.rs  constraints_counter.rs  constraints_folder.rs  debug.rs  display.rs  lib.rs  logs.rs  misc.rs  multilinear.rs  packed_constraints_folder.rs  point.rs  poseidon.rs  poseidon2.rs  univariate.rs  wrappers.rs
crates/whir/: Cargo.toml
crates/whir/src/: commit.rs  config.rs  dft.rs  lib.rs  matrix.rs  merkle.rs  open.rs  svo.rs  utils.rs  verify.rs
crates/whir/tests/: dump_test_vectors.rs  run_whir.rs  security_budget.rs  verifier_protocol_audit.rs
(+977 files in other folders)
