[package]
name = "lean-multisig"
version.workspace = true
edition.workspace = true

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/*",
    "crates/lean_prover/witness_generation",
]

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.dead_code = "allow"
rustdoc.all = "warn"

[lints.clippy]
# all lints that are on by default (correctness, suspicious, style, complexity, perf)
all = { level = "warn", priority = -1 }

# new lints that are still under development
nursery = { level = "warn", priority = -1 }
# avoid lints that are too pedantic
doc_markdown = "allow"

# lints which are rather strict or have occasional false positives
pedantic = { level = "warn", priority = -1 }
# avoid lints that are too pedantic
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
many_single_char_names = "allow"
should_panic_without_expect = "allow"
similar_names = "allow"
suboptimal_flops = "allow"
cast_sign_loss = "allow"

[workspace.dependencies]
# Local
air = { path = "crates/air" }
utils = { path = "crates/utils" }
lean_vm = { path = "crates/lean_vm" }
sub_protocols = { path = "crates/sub_protocols" }
lookup = { path = "crates/lookup" }
lean_compiler = { path = "crates/lean_compiler" }
lean_prover = { path = "crates/lean_prover" }
rec_aggregation = { path = "crates/rec_aggregation" }
witness_generation = { path = "crates/lean_prover/witness_generation" }

# External
thiserror = "2.0"
clap = { version = "4.5.52", features = ["derive"] }
rand = "0.9.2"
sha3 = "0.10.8"
derive_more = { version = "2.0.1", features = ["full"] }
pest = "2.7"
pest_derive = "2.7"
itertools = "0.14.0"
colored = "3.0.0"
tracing = "0.1.26"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
bincode = "1.3.3"
hex = "0.4.3"
num_enum = "0.7.5"
tracing-subscriber = { version = "0.3.19", features = ["std", "env-filter"] }
tracing-forest = { version = "0.3.0", features = ["ansi", "smallvec"] }
p3-koala-bear = { git = "https://github.com/TomWambsgans/Plonky3.git", branch = "lean-vm-simple" }
p3-baby-bear = { git = "https://github.com/TomWambsgans/Plonky3.git", branch = "lean-vm-simple" }
p3-poseidon2 = { git = "https://github.com/TomWambsgans/Plonky3.git", branch = "lean-vm-simple" }
p3-symmetric = { git = "https://github.com/TomWambsgans/Plonky3.git", branch = "lean-vm-simple" }
p3-goldilocks = { git = "https://github.com/TomWambsgans/Plonky3.git", branch = "lean-vm-simple" }
p3-challenger = { git = "https://github.com/TomWambsgans/Plonky3.git", branch = "lean-vm-simple" }
p3-util = { git = "https://github.com/TomWambsgans/Plonky3.git", branch = "lean-vm-simple" }
p3-monty-31 = { git = "https://github.com/TomWambsgans/Plonky3.git", branch = "lean-vm-simple" }

whir-p3 = { git = "https://github.com/TomWambsgans/whir-p3", branch = "lean-vm-simple" }
multilinear-toolkit = { git = "https://github.com/leanEthereum/multilinear-toolkit.git", branch = "lean-vm-simple" }
leansig = { git = "https://github.com/leanEthereum/leansig.git", rev = "ae12a5feb25d917c42b6466444ebd56ec115a629" }

[dependencies]
clap.workspace = true
rec_aggregation.workspace = true
p3-koala-bear.workspace = true
lean_vm.workspace = true
multilinear-toolkit.workspace = true
whir-p3.workspace = true
rand.workspace = true

# [patch."https://github.com/TomWambsgans/Plonky3.git"]
# p3-koala-bear = { path = "../Plonky3/koala-bear" }
# p3-field = { path = "../Plonky3/field" }
# p3-poseidon2 = { path = "../Plonky3/poseidon2" }
# p3-symmetric = { path = "../Plonky3/symmetric" }
# p3-merkle-tree = { path = "../Plonky3/merkle-tree" }
# p3-commit = { path = "../Plonky3/commit" }
# p3-matrix = { path = "../Plonky3/matrix" }
# p3-dft = { path = "../Plonky3/dft" }
# p3-challenger = { path = "../Plonky3/challenger" } 
# p3-monty-31 = { path = "../Plonky3/monty-31" }
# p3-maybe-rayon = { path = "../Plonky3/maybe-rayon" }
# p3-util = { path = "../Plonky3/util" }

# [patch."https://github.com/TomWambsgans/whir-p3.git"]
# whir-p3 = { path = "../whir-p3" }

# [patch."https://github.com/leanEthereum/multilinear-toolkit.git"]
# multilinear-toolkit = { path = "../multilinear-toolkit" }

# [profile.release]
# opt-level = 1

[profile.release]
lto = "thin"
