[package]
name = "lean-multisig"
version.workspace = true
edition.workspace = true

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/*",
    "crates/multilinear-toolkit/utils",
    "crates/multilinear-toolkit/field",
    "crates/multilinear-toolkit/koala-bear",
    "crates/multilinear-toolkit/poly",
    "crates/multilinear-toolkit/symetric",
    "crates/multilinear-toolkit/air",
    "crates/multilinear-toolkit/fiat-shamir",
    "crates/multilinear-toolkit/sumcheck",
    "crates/multilinear-toolkit/whir",
]

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.dead_code = "allow"
rustdoc.all = "warn"

[lints.clippy]
# all lints that are on by default (correctness, suspicious, style, complexity, perf)
all = { level = "warn", priority = -1 }

# new lints that are still under development
nursery = { level = "warn", priority = -1 }
# avoid lints that are too pedantic
doc_markdown = "allow"

# lints which are rather strict or have occasional false positives
pedantic = { level = "warn", priority = -1 }
# avoid lints that are too pedantic
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
many_single_char_names = "allow"
should_panic_without_expect = "allow"
similar_names = "allow"
suboptimal_flops = "allow"
cast_sign_loss = "allow"

[workspace.dependencies]
# Local
air = { path = "crates/air" }
utils = { path = "crates/utils" }
lean_vm = { path = "crates/lean_vm" }
xmss = { path = "crates/xmss" }
sub_protocols = { path = "crates/sub_protocols" }
lean_compiler = { path = "crates/lean_compiler" }
lean_prover = { path = "crates/lean_prover" }
rec_aggregation = { path = "crates/rec_aggregation" }

# External
clap = { version = "4.5.52", features = ["derive"] }
rand = "0.9.2"
rayon = "*"
pest = "2.7"
pest_derive = "2.7"
itertools = "0.14.0"
tracing = "0.1.26"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
tracing-subscriber = { version = "0.3.19", features = ["std", "env-filter"] }
tracing-forest = { version = "0.3.0", features = ["ansi", "smallvec"] }

multilinear-toolkit = { path = "crates/multilinear-toolkit" }

[dependencies]
clap.workspace = true
rec_aggregation.workspace = true
xmss.workspace = true
air.workspace = true
rand.workspace = true
sub_protocols.workspace = true
utils.workspace = true

lean_vm.workspace = true
multilinear-toolkit.workspace = true


[profile.release]
lto = "thin"
