[package]
name = "lean-da"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
backend.workspace = true
clap.workspace = true
include_dir.workspace = true
lean_compiler.workspace = true
lean_prover.workspace = true
lean_vm.workspace = true
postcard.workspace = true
rand.workspace = true
sha3.workspace = true
utils.workspace = true
