[package]
name = "lean-vm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
p3-baby-bear.workspace = true
p3-koala-bear.workspace = true
p3-field.workspace = true

thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
