[package]
name = "lean_compiler"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
pest.workspace = true
pest_derive.workspace = true
utils.workspace = true
xmss.workspace = true
rand.workspace = true
p3-poseidon2.workspace = true
p3-koala-bear.workspace = true
p3-challenger.workspace = true
p3-symmetric.workspace = true
p3-util.workspace = true
whir-p3.workspace = true
tracing.workspace = true
air.workspace = true
sub_protocols.workspace = true
lookup.workspace = true
lean_vm.workspace = true
multilinear-toolkit.workspace = true