[package]
name = "lean_prover"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
pest.workspace = true
pest_derive.workspace = true
utils.workspace = true
xmss.workspace = true
rand.workspace = true




tracing.workspace = true
air.workspace = true
sub_protocols.workspace = true
lean_vm.workspace = true
lean_compiler.workspace = true
multilinear-toolkit.workspace = true
itertools.workspace = true

[dev-dependencies]
xmss.workspace = true