[package]
name = "lean_vm"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
colored.workspace = true
pest.workspace = true
pest_derive.workspace = true
utils.workspace = true
xmss.workspace = true
rand.workspace = true
p3-poseidon2.workspace = true
p3-koala-bear.workspace = true
p3-symmetric.workspace = true
p3-util.workspace = true
tracing.workspace = true
air.workspace = true
thiserror.workspace = true
multilinear-toolkit.workspace = true
num_enum.workspace = true
itertools.workspace = true
strum.workspace = true