[package]
name = "lookup"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
utils.workspace = true
p3-koala-bear.workspace = true
rand.workspace = true
whir-p3.workspace = true
tracing.workspace = true
p3-util.workspace = true
multilinear-toolkit.workspace = true
