[package]
name = "poseidon_circuit"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
p3-field.workspace = true
tracing.workspace = true
utils.workspace = true
p3-util.workspace = true
multilinear-toolkit.workspace = true
p3-koala-bear.workspace = true
p3-poseidon2.workspace = true
packed_pcs.workspace = true
p3-monty-31.workspace = true

[dev-dependencies]
p3-matrix.workspace = true
rand.workspace = true
whir-p3.workspace = true