[package]
name = "rec_aggregation"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
utils.workspace = true
xmss.workspace = true
rand.workspace = true
p3-poseidon2.workspace = true
p3-koala-bear.workspace = true
p3-challenger.workspace = true
p3-air.workspace = true
p3-symmetric.workspace = true
p3-util.workspace = true
whir-p3.workspace = true
tracing.workspace = true
air.workspace = true
sub_protocols.workspace = true
lookup.workspace = true
lean_vm.workspace = true
serde_json.workspace = true
lean_compiler.workspace = true
lean_prover.workspace = true
multilinear-toolkit.workspace = true
