[package]
name = "sub_protocols"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
p3-field.workspace = true
tracing.workspace = true
utils.workspace = true
whir-p3.workspace = true
derive_more.workspace = true
rayon.workspace = true
p3-util.workspace = true
multilinear-toolkit.workspace = true
lookup.workspace = true

[dev-dependencies]
p3-koala-bear.workspace = true
rand.workspace = true

