[package]
name = "mt-fiat-shamir"
version.workspace = true
edition.workspace = true

[dependencies]
field = { path = "../field", package = "mt-field" }
goldilocks = { path = "../goldilocks", package = "mt-goldilocks" }
symetric = { path = "../symetric", package = "mt-symetric" }
utils = { path = "../utils", package = "mt-utils" }
tracing.workspace = true
serde.workspace = true
rayon.workspace = true
