[package]
name = "mt-koala-bear"
version.workspace = true
edition.workspace = true

[dependencies]
field = { path = "../field", package = "mt-field" }
utils = { path = "../utils", package = "mt-utils" }

rand.workspace = true
rayon.workspace = true
serde.workspace = true
itertools.workspace = true
tracing.workspace = true
num-bigint = "*"
paste = "1"
