[package]
name = "mt-poly"
version.workspace = true
edition.workspace = true

[dependencies]
field = { path = "../field", package = "mt-field" }
utils = { path = "../utils", package = "mt-utils" }
system-info.workspace = true

itertools.workspace = true
rayon.workspace = true
rand.workspace = true
serde.workspace = true

[dev-dependencies]
goldilocks = { path = "../goldilocks", package = "mt-goldilocks" }
