[package]
name = "mt-poly"
version.workspace = true
edition.workspace = true

[dependencies]
field = { path = "../field", package = "mt-field" }
utils = { path = "../utils", package = "mt-utils" }

itertools.workspace = true
rayon.workspace = true
rand.workspace = true

[dev-dependencies]
koala-bear = { path = "../koala-bear", package = "mt-koala-bear" }
