[package]
name = "mt-whir"
version.workspace = true
edition.workspace = true

[dependencies]
field = { path = "../field", package = "mt-field" }
koala-bear = { path = "../koala-bear", package = "mt-koala-bear" }
poly = { path = "../poly", package = "mt-poly" }
sumcheck = { path = "../sumcheck", package = "mt-sumcheck" }
fiat-shamir = { path = "../fiat-shamir", package = "mt-fiat-shamir" }
utils = { path = "../utils", package = "mt-utils" }
symetric = { path = "../symetric", package = "mt-symetric" }

itertools.workspace = true
rayon.workspace = true
rand.workspace = true
tracing.workspace = true

[dev-dependencies]
tracing-forest.workspace = true
tracing-subscriber.workspace = true
